Fix cell content not fit on mobile end

--- a/src/Cell.css
+++ b/src/Cell.css
@@ -40,6 +40,7 @@
         width: 10px;
         margin: 0.05rem;
         border: solid 0.5px black;
+        font-size: 0.5rem;
     }
 }
 
